--- a/Skin EDA .ipynb
+++ b/Skin EDA .ipynb
@@ -1354,6 +1354,324 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removing unwanted columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lesion_id</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>dx</th>\n",
+       "      <th>dx_type</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>localization</th>\n",
+       "      <th>dataset</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HAM_0000118</td>\n",
+       "      <td>ISIC_0027419</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HAM_0000118</td>\n",
+       "      <td>ISIC_0025030</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HAM_0002730</td>\n",
+       "      <td>ISIC_0026769</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HAM_0002730</td>\n",
+       "      <td>ISIC_0025661</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HAM_0002761</td>\n",
+       "      <td>ISIC_0029176</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>face</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lesion_id      image_id   dx dx_type   age   sex localization  \\\n",
+       "0  HAM_0000118  ISIC_0027419  bkl   histo  80.0  male        scalp   \n",
+       "1  HAM_0000118  ISIC_0025030  bkl   histo  80.0  male        scalp   \n",
+       "2  HAM_0002730  ISIC_0026769  bkl   histo  80.0  male        scalp   \n",
+       "3  HAM_0002730  ISIC_0025661  bkl   histo  80.0  male        scalp   \n",
+       "6  HAM_0002761  ISIC_0029176  bkl   histo  60.0  male         face   \n",
+       "\n",
+       "        dataset  \n",
+       "0  vidir_modern  \n",
+       "1  vidir_modern  \n",
+       "2  vidir_modern  \n",
+       "3  vidir_modern  \n",
+       "6  vidir_modern  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>dx</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>localization</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ISIC_0027419</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ISIC_0025030</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ISIC_0026769</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ISIC_0025661</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ISIC_0029176</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>face</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10010</th>\n",
+       "      <td>ISIC_0033084</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>abdomen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10011</th>\n",
+       "      <td>ISIC_0033550</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>abdomen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10012</th>\n",
+       "      <td>ISIC_0033536</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>abdomen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10013</th>\n",
+       "      <td>ISIC_0032854</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>face</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10014</th>\n",
+       "      <td>ISIC_0032258</td>\n",
+       "      <td>mel</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>back</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9847 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           image_id     dx   age     sex localization\n",
+       "0      ISIC_0027419    bkl  80.0    male        scalp\n",
+       "1      ISIC_0025030    bkl  80.0    male        scalp\n",
+       "2      ISIC_0026769    bkl  80.0    male        scalp\n",
+       "3      ISIC_0025661    bkl  80.0    male        scalp\n",
+       "6      ISIC_0029176    bkl  60.0    male         face\n",
+       "...             ...    ...   ...     ...          ...\n",
+       "10010  ISIC_0033084  akiec  40.0    male      abdomen\n",
+       "10011  ISIC_0033550  akiec  40.0    male      abdomen\n",
+       "10012  ISIC_0033536  akiec  40.0    male      abdomen\n",
+       "10013  ISIC_0032854  akiec  80.0    male         face\n",
+       "10014  ISIC_0032258    mel  70.0  female         back\n",
+       "\n",
+       "[9847 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(['lesion_id','dx_type','dataset'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('curated_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -1361,6 +1679,218 @@
    "source": [
     "df.to_csv('updated_dataset.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>lesion_id</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>dx</th>\n",
+       "      <th>dx_type</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>localization</th>\n",
+       "      <th>dataset</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>HAM_0000118</td>\n",
+       "      <td>ISIC_0027419</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>HAM_0000118</td>\n",
+       "      <td>ISIC_0025030</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>HAM_0002730</td>\n",
+       "      <td>ISIC_0026769</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>HAM_0002730</td>\n",
+       "      <td>ISIC_0025661</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>scalp</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>HAM_0002761</td>\n",
+       "      <td>ISIC_0029176</td>\n",
+       "      <td>bkl</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>face</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9842</th>\n",
+       "      <td>10010</td>\n",
+       "      <td>HAM_0002867</td>\n",
+       "      <td>ISIC_0033084</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>abdomen</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9843</th>\n",
+       "      <td>10011</td>\n",
+       "      <td>HAM_0002867</td>\n",
+       "      <td>ISIC_0033550</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>abdomen</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9844</th>\n",
+       "      <td>10012</td>\n",
+       "      <td>HAM_0002867</td>\n",
+       "      <td>ISIC_0033536</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>abdomen</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9845</th>\n",
+       "      <td>10013</td>\n",
+       "      <td>HAM_0000239</td>\n",
+       "      <td>ISIC_0032854</td>\n",
+       "      <td>akiec</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>face</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9846</th>\n",
+       "      <td>10014</td>\n",
+       "      <td>HAM_0003521</td>\n",
+       "      <td>ISIC_0032258</td>\n",
+       "      <td>mel</td>\n",
+       "      <td>histo</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>back</td>\n",
+       "      <td>vidir_modern</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9847 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0    lesion_id      image_id     dx dx_type   age     sex  \\\n",
+       "0              0  HAM_0000118  ISIC_0027419    bkl   histo  80.0    male   \n",
+       "1              1  HAM_0000118  ISIC_0025030    bkl   histo  80.0    male   \n",
+       "2              2  HAM_0002730  ISIC_0026769    bkl   histo  80.0    male   \n",
+       "3              3  HAM_0002730  ISIC_0025661    bkl   histo  80.0    male   \n",
+       "4              6  HAM_0002761  ISIC_0029176    bkl   histo  60.0    male   \n",
+       "...          ...          ...           ...    ...     ...   ...     ...   \n",
+       "9842       10010  HAM_0002867  ISIC_0033084  akiec   histo  40.0    male   \n",
+       "9843       10011  HAM_0002867  ISIC_0033550  akiec   histo  40.0    male   \n",
+       "9844       10012  HAM_0002867  ISIC_0033536  akiec   histo  40.0    male   \n",
+       "9845       10013  HAM_0000239  ISIC_0032854  akiec   histo  80.0    male   \n",
+       "9846       10014  HAM_0003521  ISIC_0032258    mel   histo  70.0  female   \n",
+       "\n",
+       "     localization       dataset  \n",
+       "0           scalp  vidir_modern  \n",
+       "1           scalp  vidir_modern  \n",
+       "2           scalp  vidir_modern  \n",
+       "3           scalp  vidir_modern  \n",
+       "4            face  vidir_modern  \n",
+       "...           ...           ...  \n",
+       "9842      abdomen  vidir_modern  \n",
+       "9843      abdomen  vidir_modern  \n",
+       "9844      abdomen  vidir_modern  \n",
+       "9845         face  vidir_modern  \n",
+       "9846         back  vidir_modern  \n",
+       "\n",
+       "[9847 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
