--- a/Skin EDA .ipynb
+++ b/Skin EDA .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {
     "id": "Mt1KkKP1Dbmz"
    },
@@ -12,7 +12,9 @@
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "\n",
+    "pd.pandas.set_option('display.max_columns',None)\n"
    ]
   },
   {
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -159,13 +161,209 @@
        "4  vidir_modern  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection = data.groupby(['localization','dx']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "localization_index = data['localization'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['scalp', 'ear', 'face', 'back', 'trunk', 'chest',\n",
+       "       'upper extremity', 'abdomen', 'unknown', 'lower extremity',\n",
+       "       'genital', 'neck', 'hand', 'foot', 'acral'], dtype=object)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "localization_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "copy = data.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*************scalp**********************\n",
+      "localization  dx   \n",
+      "scalp         akiec    14\n",
+      "              bcc      19\n",
+      "              bkl      34\n",
+      "              mel      14\n",
+      "              nv       45\n",
+      "              vasc      2\n",
+      "dtype: int64\n",
+      "*************ear**********************\n",
+      "localization  dx   \n",
+      "ear           akiec     3\n",
+      "              bkl       6\n",
+      "              mel      17\n",
+      "              nv       30\n",
+      "dtype: int64\n",
+      "*************face**********************\n",
+      "localization  dx   \n",
+      "face          akiec    113\n",
+      "              bcc      101\n",
+      "              bkl      319\n",
+      "              mel      104\n",
+      "              nv       100\n",
+      "              vasc       8\n",
+      "dtype: int64\n",
+      "*************back**********************\n",
+      "localization  dx   \n",
+      "back          akiec      29\n",
+      "              bcc       186\n",
+      "              bkl       202\n",
+      "              df          2\n",
+      "              mel       324\n",
+      "              nv       1427\n",
+      "              vasc       22\n",
+      "dtype: int64\n",
+      "*************trunk**********************\n",
+      "localization  dx   \n",
+      "trunk         akiec       1\n",
+      "              bcc        11\n",
+      "              bkl        73\n",
+      "              mel        47\n",
+      "              nv       1241\n",
+      "              vasc       31\n",
+      "dtype: int64\n",
+      "*************chest**********************\n",
+      "localization  dx   \n",
+      "chest         akiec     12\n",
+      "              bcc       47\n",
+      "              bkl       74\n",
+      "              mel       68\n",
+      "              nv       200\n",
+      "              vasc       6\n",
+      "dtype: int64\n",
+      "*************upper extremity**********************\n",
+      "localization     dx   \n",
+      "upper extremity  akiec     62\n",
+      "                 bcc       49\n",
+      "                 bkl      104\n",
+      "                 df        24\n",
+      "                 mel      213\n",
+      "                 nv       655\n",
+      "                 vasc      11\n",
+      "dtype: int64\n",
+      "*************abdomen**********************\n",
+      "localization  dx   \n",
+      "abdomen       akiec      5\n",
+      "              bcc       18\n",
+      "              bkl       42\n",
+      "              df         4\n",
+      "              mel       66\n",
+      "              nv       860\n",
+      "              vasc      27\n",
+      "dtype: int64\n",
+      "*************unknown**********************\n",
+      "localization  dx \n",
+      "unknown       bcc      5\n",
+      "              bkl     23\n",
+      "              mel     10\n",
+      "              nv     196\n",
+      "dtype: int64\n",
+      "*************lower extremity**********************\n",
+      "localization     dx   \n",
+      "lower extremity  akiec      65\n",
+      "                 bcc        58\n",
+      "                 bkl       174\n",
+      "                 df         82\n",
+      "                 mel       192\n",
+      "                 nv       1479\n",
+      "                 vasc       27\n",
+      "dtype: int64\n",
+      "*************genital**********************\n",
+      "localization  dx \n",
+      "genital       bkl     2\n",
+      "              df      1\n",
+      "              nv     45\n",
+      "dtype: int64\n",
+      "*************neck**********************\n",
+      "localization  dx   \n",
+      "neck          akiec    10\n",
+      "              bcc      14\n",
+      "              bkl      31\n",
+      "              mel      29\n",
+      "              nv       81\n",
+      "              vasc      3\n",
+      "dtype: int64\n",
+      "*************hand**********************\n",
+      "localization  dx   \n",
+      "hand          akiec    13\n",
+      "              bcc       2\n",
+      "              bkl      14\n",
+      "              mel       1\n",
+      "              nv       55\n",
+      "              vasc      5\n",
+      "dtype: int64\n",
+      "*************foot**********************\n",
+      "localization  dx \n",
+      "foot          bcc      4\n",
+      "              bkl      1\n",
+      "              df       2\n",
+      "              mel     28\n",
+      "              nv     284\n",
+      "dtype: int64\n",
+      "*************acral**********************\n",
+      "localization  dx\n",
+      "acral         nv    7\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in localization_index:\n",
+    "    data_frame = copy[copy['localization']==i]\n",
+    "    print(f'*************{i}**********************')\n",
+    "    connection = data_frame.groupby(['localization','dx']).size()\n",
+    "    \n",
+    "    print(connection)"
    ]
   },
   {
