--- a/utils.ipynb
+++ b/utils.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "49e71d60",
+   "id": "bf35d43b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "2b9061f5",
+   "execution_count": 46,
+   "id": "d2939615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "id": "4ba1a3f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Benign keratosis-like lesions (solar lentigines / seborrheic keratoses and lichen-planus like keratoses)'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disease_name(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "ca98846d",
+   "id": "186add0f",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8203fe2d",
+   "id": "326f4399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f1cc3734",
+   "id": "009d95e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9b4c4e6d",
+   "id": "1dcc6f3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "559f878b",
+   "id": "df86e067",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1abc91d4",
+   "id": "0a770ff3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "034910a0",
+   "id": "c0c2ddc1",
    "metadata": {},
    "outputs": [
     {
